1.0 Beta
- Fix to no show icon of note in print preview
- Better english translation (thanks to @pappi_)
- Fix missing use of a l10n string for email sender
- Fix for delete draft
- Fix path on save invoice
- Fix for incorrect attach of pdf
- Fix of save a blank invoice
- Fix save and load invoice with no item
- Fix for missing check letter on rate field
- Replaced Activity Indicator with BlockUI
- Use of path var on delete file
- Prepare for a future support for other backend for invoice data
- Moved to right the logo
- Added default logo image config parameter
- Added info box and config parameter
- Live search on customer list

1.0 Alpha
First release