@@ -14,6 +14,7 @@
 - Moved to right the logo
 - Added default logo image config parameter
 - Added info box and config parameter
+- Added option for choose dot or comma for decimal number
 - Live search on customer list
 
 1.0 Alpha
